syntax = "proto3";

package pb;



//The Notifications service definition.
service Notifications {
 rpc SendEmail                  (SendEmailRequest                 ) returns (SendEmailReply                 );
 rpc SendWelcomeToLensEmail     (SendWelcomeToLensEmailRequest    ) returns (SendWelcomeToLensEmailReply    );
 rpc SendPasswordChangeEmail    (SendPasswordChangeEmailRequest   ) returns (SendPasswordChangeEmailReply   );
 rpc SendEmailAccountResetEmail (SendEmailAccountResetEmailRequest) returns (SendEmailAccountResetEmailReply);
}

message SendEmailRequest {}

message SendEmailReply {}

message SendWelcomeToLensEmailRequest {}

message SendWelcomeToLensEmailReply {}

message SendPasswordChangeEmailRequest {}

message SendPasswordChangeEmailReply {}

message SendEmailAccountResetEmailRequest {}

message SendEmailAccountResetEmailReply {}

